syntax = "proto3";

//界面输出信息
message PB_Hmi3dOutputData
{
    uint64  lTimestamp_ms = 1;
    uint32  Hmi_apa_sel = 2;
    uint32  Hmi_park_mode = 3;
    uint32  Hmi_start_park = 4;
    uint32  Hmi_cancel_req = 5;
    uint32  Hmi_Selected = 6;
    uint32  Hmi_pause_req = 7;
    uint32  Hmi_resum_req = 8;
    uint32  Hmi_tragParkConfSwt = 9;
    uint32  Hmi_parkslot_id = 10;
    uint32  Hmi_parkout_dir = 11;
    repeated float  Hmi_slot_points = 12;
}